[project]
name = "duck-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.121.1",
    "frictionless[duckdb]>=5.18.1",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "uuid6>=2025.0.1",
    "uvicorn>=0.38.0",
]
